speedup the TypeHierarchy by 3-6x and 1.7x in construction by making use of preorder + range queries + bitsets